# tp_grafos

./: .gitignore  CMakeLists.txt  READ.ME  main.c  pilot.txt  run  run.sh  tad.c  tad.h
cjson/: cJSON.c  cJSON.h
conexo/: conexo.h
depth/: depth.c  depth.h
files/: readFiles.c  readFiles.h
grafo/LinkedList/: grafoLinkedList.c  grafoLinkedList.h
grafo/LinkedList/articulacao/: articulacao.c
grafo/LinkedList/articulation/: articulation.c  articulation.h
grafo/LinkedList/bridge/: bridge.c  bridge.h
grafo/LinkedList/conexo/: conexo.c  conexo.h
grafo/LinkedList/depth/: depthLikedList.c  depthLinkedList.h
grafo/LinkedList/linkedPaad/: linkedPaad.c  linkedPaad.h
grafo/LinkedList/linkedlist/: linkedlist.c  linkedlist.h
grafo/LinkedList/neighborhood/: neighborhood.c  neighborhood.h
grafo/matriz/: grafoMatriz.c
grafo/matriz/articulacao/: articulacao.c
grafo/matriz/matrizPaad/: matrizPaad.c  matrizPaad.h
grafo_scaffold/: tad.c  tad.h
grafo_scaffold/articulacao/: articulacao.c  articulacao.h
grafo_scaffold/conexo/: conexo.c  conexo.h
grafo_scaffold/depth/: depth.h
menus/linkedList/: linkedlistmenu.c  linkedlistmenu.h
menus/matriz/: matriz.c  matriz.h
paad/: paad.c  paad.h
src/: defines.h
src/algorithms/TCPLIB/: tcplib.c  tcplib.h
src/algorithms/articulation/: articulation.c  articulation.h
src/algorithms/bridge/: bridge.c  bridge.h
src/algorithms/cheaperInsertion/: cheaperInsertion.c  cheaperInsertion.h
src/algorithms/cheaperInsertion/ListNodes/: ListNodes.c  ListNodes.h
src/algorithms/conexo/: conexo.h
src/algorithms/depth/: depthLikedList.c  depthLinkedList.h
src/algorithms/kOpt/: kopt.c  kopt.h
src/algorithms/lessCost/: lessCost.c  lessCost.h
src/algorithms/linkedPaad/: linkedPaad.h
src/algorithms/neighborhood/: neighborhood.c  neighborhood.h
src/grafo/algorithms/depth/: depth.h
src/grafo/algorithms/matrizPaad/: matrizPaad.h
src/grafo/matriz/: grafoMatriz.h
src/grafo/menus/matriz/: matriz.c
src/matriz/algorithms/articulacao/: articulacao.h
src/matriz/algorithms/conexo/: conexo.c  conexo.h
src/matriz/menus/matriz/: matriz.c  matriz.h
src/menu/: menu.c  menu.h
src/modules/analytics/: analytics.c  analytics.h
src/modules/analytics/hashtable/: hash.c  hash.h
src/modules/cjson/: cJSON.h
src/modules/linkedlist/: linkedlist.c  linkedlist.h
src/modules/paad/: paad.c  paad.h
src/modules/utils/: utils.h
src/tads/HamiltonianPath/: hamiltonianPath.c  hamiltonianPath.h
src/tads/LinkedGrafo/: linkedGrafo.c  linkedGrafo.h
testes/: teste_conexo.json
testes/paad/: cheaperinsertion.json  complet_pdf_aula.json  completo.json  depth.json  grafo_peso.json  new_json.json  testeParcial.json  trick.json  trivial.json
utils/: defines.h  utils.c  utils.h
